# ask

./: .ask_history.pkl  .ask_log.txt  .cache.db  .gitignore  README.md  ask.py  click_refactor.md  download_article.py  download_youtube_transcript.py  groq_examples.py  message_store.pkl  perplexity.py  pyproject.toml  readme.md  requirements.txt  serp_api.py  setup.py
Ask.egg-info/: PKG-INFO  SOURCES.txt
dev/: old_ask.py
src/ask/: ask_cli.py  ask_function.py  system_info.py
src/ask/prompts/: debug_prompt_string.jinja2  debug_system_prompt.jinja2  system_prompt.jinja2
