[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask"
version = "2.0"
description = "A helpful system administrator."
requires-python = ">=3.12,<3.13.4"
dependencies = [
    "anthropic>=0.57.1",
    "database-clients",
    "google-genai>=1.36.0",
    "instructor>=1.9.0",
    "jinja2>=3.1.6",
    "loadenv>=0.1.1",
    "openai>=1.93.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "rich>=14.0.0",
    "tiktoken>=0.11.0",
    "tinydb>=4.8.2",
]

[project.scripts]
ask = "ask:main"

[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"

[tool.uv.sources]
database-clients = { path = "../database-clients", editable = true }

