[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ask"
version = "1.0"
description = "A helpful system administrator."
requires-python = ">=3.12,<3.13.4"
dependencies = [
    "twig"
]

[tool.pytest.ini_options]
addopts = "-v -s --tb=short --no-header --showlocals --pdb -x"
log_cli = true
log_cli_level = "INFO"

[tool.uv.sources]
twig = { path = "../twig-project", editable = true }

[project.scripts]
ask = "ask.ask_cli:main"
